--- a/template/package.json
+++ b/template/package.json
@@ -20,6 +20,7 @@
     "papaparse": "^5.4.1",
     "pg": "^8.11.3",
     "sequelize": "^6.37.1",
+    "uuid": "^9.0.1",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
